--- a/PDG-biblioteca/PDG-biblioteca/PDG-biblioteca.vcxproj
+++ b/PDG-biblioteca/PDG-biblioteca/PDG-biblioteca.vcxproj
@@ -210,6 +210,10 @@ copy /Y "$(ProjectDir)libs\ASSIMP\lib\assimp-vc140-mt.dll" "$(OutDir)"
     <ClCompile Include="src\Timer.cpp" />
     <ClCompile Include="src\Window.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="res\shaders\MainShader_FS.shader" />
+    <None Include="res\shaders\MainShader_VS.shader" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
