--- a/PDG-biblioteca/PDG-biblioteca/PDG-biblioteca.vcxproj.filters
+++ b/PDG-biblioteca/PDG-biblioteca/PDG-biblioteca.vcxproj.filters
@@ -13,6 +13,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="res">
+      <UniqueIdentifier>{ad822520-6977-4653-8489-f2cfe1b5fa04}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="res\shaders">
+      <UniqueIdentifier>{7c393df6-1ecc-45c4-898f-6d4754f0d622}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BaseGame.h">
@@ -161,5 +167,13 @@
     <ClCompile Include="src\Frustum.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="res\shaders\MainShader_FS.shader">
+      <Filter>res\shaders</Filter>
+    </None>
+    <None Include="res\shaders\MainShader_VS.shader">
+      <Filter>res\shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
